# TrigaServer

./: .gitignore  CMakeLists.txt  README.md  compile.sh  flake.nix
include/: TrigaServer.h
resources/: TrigaServer.service  trigaserver.conf  trigaserver.service
src/: CMakeLists.txt  TrigaModbus.cpp  TrigaModbus.hpp  TrigaServer.cpp  TrigaServer.h  TrigaServer.hpp  estrutura.hpp  main.cpp
